--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ theme: jekyll-theme-primer
 github:
   private: false
   license:
-    name: GNUv3
+    name: GPLv3
   source:
     branch: "master"
     path: "/"
