--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -112,7 +112,8 @@
 		"task": "Monkeys",
 		"monster": "Monkey (lvl 3)",
 		"amount": "42",
-		"area": "",
-		"notes": ""
+		"area": "Ardougne Zoo",
+		coords: "4250,2375;4490,2525",
+		"notes": "Unlocks General Store, House, 5 Quests, Furnace"
 	}
 ]
