--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -120,7 +120,7 @@
 		"task": "Zombies",
 		"monster": "Zombie (lvl 18)",
 		"amount": "24",
-		"area": "",
+		"area": "Stronghold of Security 2nd Floor",
 		"notes": ""
 	}
 ]
