--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -158,6 +158,7 @@
 		"monster": "Spider (lvl 3)",
 		"amount": "22",
 		"area": "H.A.M. Hideout Entrance",
+		"coords": "5995,2480;6160,2640",
 		"notes": "Unlocks H.A.M. Hideout"
 	}
 ]
