--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -205,6 +205,6 @@
 		"amount": "19",
 		"area": "Silvarea",
 		"coords": "6460,1775;6815,1955",
-		"notes": ""
+		"notes": "Unlocks 3 Quests, Limestone Mine"
 	}
 ]
