--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -220,5 +220,12 @@
 		"amount": "44",
 		"area": "Tai Bwo Wannai",
 		"notes": "Unlocks General Store, Anvil, 2 Quests"
+	},
+	{
+		"task": "Goblins",
+		"monster": "Goblin (lvl 3)",
+		"amount": "29",
+		"area": "Lumbridge",
+		"notes": ""
 	}
 ]
