--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -225,8 +225,8 @@
 		"task": "Goblins",
 		"monster": "Goblin (lvl 3)",
 		"amount": "29",
-		"area": "Lumbridge",
-		"notes": ""
+		"area": "Rimmington",
+		"notes": "Unlocks Rimmington"
 	},
 	{
 		"task": "Spiders",
