--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -301,6 +301,6 @@
 		"amount": "39",
 		"area": "Slayer Tower",
 		"coords": "6765,1550;6985,1740",
-		"notes": ""
+		"notes": "Unlocks Mazchna"
 	}
 ]
