--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -339,5 +339,12 @@
 		"amount": "44",
 		"area": "Kalphite Hives",
 		"notes": ""
+	},
+	{
+		"task": "Cave Slimes",
+		"monster": "Cave Slime (lvl 23)",
+		"amount": "13",
+		"area": "Lumbridge Swamp Caves",
+		"notes": ""
 	}
 ]
