--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -353,5 +353,13 @@
 		"amount": "20",
 		"area": "Lumbridge Swamp Cave",
 		"notes": ""
+	},
+	{
+		"task": "Monkeys",
+		"monster": "Monkey (lvl 3)",
+		"amount": "36",
+		"area": "North of Shilo Village",
+		"coords": "3980,3160;5225,3485",
+		"notes": "Unlocks Shilo Village, Duradel, Nature Altar"
 	}
 ]
