--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -367,6 +367,7 @@
 		"monster": "Dwarf (lvl 14)",
 		"amount": "39",
 		"area": "Southwest of Coal Trucks",
+		"coords": "4180,1765;4385,2010",
 		"notes": "Unlocks Dwarf Cannon"
 	}
 ]
