--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -5,15 +5,37 @@
 		"amount": "35",
 		"area": "Port Sarim",
 		"coords": "5595,2515;5775,2775",
-		"notes": "Unlocks shops: Axes, Runes, Fishing, Food"
+		"unlocks": {
+			"quests": [
+				"Pirate's Treasure"
+			],
+			"shops": [
+				"Betty's Magic Emporium",
+				"Grum's Gold Exchange",
+				"Brian's Battleaxe Bazaar",
+				"Gerrant's Fishy Business",
+				"Wydin's Food Store",
+				"Trader Stan"
+			],
+			"other": []
+		},
+		"notes": ""
 	},
 	{
 		"task": "Spiders",
 		"monster": "Spider (lvl 1)",
 		"amount": "17",
 		"area": "Lumbridge Castle Cellar",
-		"map": "lumbridge-caves",
-		"notes": "Unlocks RFD chest"
+		"unlocks": {
+			"quests": [
+				"Death to the Dorgeshuun"
+			],
+			"shops": [
+				"Culinaromancer's Chest"
+			],
+			"other": []
+		},
+		"notes": ""
 	},
 	{
 		"task": "Monkeys",
@@ -21,7 +43,20 @@
 		"amount": "31",
 		"area": "Brimhaven",
 		"coords": "4830,2685;5020,2865",
-		"notes": "Unlocks Seafood Shop and Agility Arena"
+		"unlocks": {
+			"quests": [
+				"Tribal Totem"
+			],
+			"shops": [
+				"Davon's Amulet Store",
+				"The Shrimp and Parrot"
+			],
+			"other": [
+				"Brimhaven Agility Arena",
+				"Brimhaven House Portal"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Goblins",
@@ -29,7 +64,19 @@
 		"amount": "33",
 		"area": "Goblin Village",
 		"coords": "5365,1750;5500,1965",
-		"notes": "Unlocks Druidic Ritual, Dorics Quest"
+		"unlocks": {
+			"quests": [
+				"Goblin Diplomacy",
+				"Doric's Quest",
+				"Druidic Ritual"
+			],
+			"shops": [],
+			"other": [
+				"Mind Altar",
+				"Wine of Zamorak"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Cows",
@@ -37,15 +84,30 @@
 		"amount": "17",
 		"area": "East of Lumbridge",
 		"coords": "6260,2380;6380,2605",
-		"notes": "Unlocks Fishing Spot"
+		"unlocks": {
+			"quests": [],
+			"shops": [],
+			"other": [
+				"Fishing Spots"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Ghosts",
 		"monster": "Ghost (lvl 19)",
 		"amount": "48",
 		"area": "Catacombs of Kourend (South)",
-		"map": "kourend-catacombs",
-		"notes": "Unlocks Moss Giants, Cyclopses, Hill Giants"
+		"unlocks": {
+			"quests": [],
+			"shops": [],
+			"other": [
+				"Moss Giants",
+				"Cyclopses",
+				"Hill Giants"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Cows",
@@ -53,7 +115,16 @@
 		"amount": "30",
 		"area": "Farm South of Falador",
 		"coords": "5600,2330;5760,2480",
-		"notes": "Unlocks Farming Store and Patches"
+		"unlocks": {
+			"quests": [],
+			"shops": [
+				"Sarah's Farming Shop"
+			],
+			"other": [
+				"Yew Trees"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Bats",
@@ -61,7 +132,22 @@
 		"amount": "39",
 		"area": "Arceuus House",
 		"coords": "1445,586;1945,790;1260,790;1775,920;1360,920;1775,1190",
-		"notes": "Unlocks Arceuus Spellbook and Shops"
+		"unlocks": {
+			"quests": [],
+			"shops": [
+				"Regath's Wares",
+				"Thyria's Wares",
+				"Filamina's Wares"
+			],
+			"other": [
+				"Arceuus Library",
+				"Dense Runestone Mine",
+				"Blood Altar",
+				"Soul Altar",
+				"Lectern"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Scorpions",
@@ -69,21 +155,53 @@
 		"amount": "16",
 		"area": "South of Al Kharid",
 		"coords": "6335,2760;6490,2900",
-		"notes": "Unlocks Fishing Spot, Kebab"
+		"unlocks": {
+			"quests": [
+				"Prince Ali Rescue",
+				"Shadow of the Storm"
+			],
+			"shops": [
+				"Karim's Kebabs"
+			],
+			"other": [
+				"Fishing Spot"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Birds",
 		"monster": "Terrorbird (gnomes)",
 		"amount": "50",
-		"area": "Gnome Stronghold",
+		"area": "Tree Gnome Stronghold (South)",
 		"coords": "3680,1910;4065,2155",
-		"notes": "Unlocks Gnome Agility"
+		"unlocks": {
+			"quests": [
+				"The Eyes of Glouphrie"
+			],
+			"shops": [],
+			"other": [
+				"Gnome Stronghold Agility Course",
+				"Spinning Wheel",
+				"Flax",
+				"Magic Tree",
+				"Nieve"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Cave bugs",
 		"monster": "Cave bug (lvl 6)",
 		"amount": "13",
 		"area": "Lumbridge Swamp Cave",
+		"unlocks": {
+			"quests": [
+				"Tears of Guthix"
+			],
+			"shops": [],
+			"other": []
+		},
 		"notes": ""
 	},
 	{
@@ -98,6 +216,13 @@
 		"monster": "Wolf (lvl 14)",
 		"amount": "40",
 		"area": "Stronghold of Security 1st Floor",
+		"unlocks": {
+			"quests": [],
+			"shops": [],
+			"other": [
+				"Gift of Peace"
+			]
+		},
 		"notes": ""
 	},
 	{
@@ -106,6 +231,13 @@
 		"amount": "20",
 		"area": "Ice Mountain",
 		"coords": "5535,1725;5670,2005",
+		"unlocks": {
+			"quests": [],
+			"shops": [
+				"Nulodion's Multicannon Parts"
+			],
+			"other": []
+		},
 		"notes": ""
 	},
 	{
@@ -114,13 +246,35 @@
 		"amount": "42",
 		"area": "Ardougne Zoo",
 		"coords": "4250,2375;4490,2525",
-		"notes": "Unlocks General Store, House, 5 Quests, Furnace"
+		"unlocks": {
+			"quests": [
+				"Eagle's Peak",
+				"Cold War",
+				"Hazeel Cult",
+				"Sheep Herder"
+			],
+			"shops": [
+				"Aemad's Adventuring Supplies"
+			],
+			"other": [
+				"Ardougne Estate Agent",
+				"Pet Insurance Services"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Zombies",
-		"monster": "Zombie (lvl 18)",
+		"monster": "Zombie (lvl 44)",
 		"amount": "24",
 		"area": "Stronghold of Security 2nd Floor",
+		"unlocks": {
+			"quests": [],
+			"shops": [],
+			"other": [
+				"Grain of Plenty"
+			]
+		},
 		"notes": ""
 	},
 	{
@@ -128,7 +282,7 @@
 		"monster": "Kalphite Worker (lvl 28)",
 		"amount": "32",
 		"area": "Kalphite Hive",
-		"notes": "Unlocks Kalphites"
+		"notes": "Kalphite Queen has to be unlocked by killing Kalphites in the lower part"
 	},
 	{
 		"task": "Dogs",
@@ -136,15 +290,36 @@
 		"amount": "37",
 		"area": "Ardougne Mansion",
 		"coords": "4385,2285;4600,2445",
-		"notes": "Unlocks Platebody Store, Cakes, Silver"
+		"unlocks": {
+			"quests": [],
+			"shops": [
+				"Zenesha's Plate Mail Body Shop"
+			],
+			"other": [
+				"Ardougne Marketplace",
+				"Ardougne Agility Course"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Bears",
 		"monster": "Bear",
 		"amount": "32",
-		"area": "Varrock Castle",
+		"area": "Varrock Palace",
 		"coords": "6165,1754;6305,1905",
-		"notes": "Unlocks Priest in Peril"
+		"unlocks": {
+			"quests": [
+				"Shield of Arrav",
+				"Garden of Tranquility",
+				"Priest in Peril"
+			],
+			"shops": [],
+			"other": [
+				"Varrock Estate Agent"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Minotaurs",
@@ -159,7 +334,16 @@
 		"amount": "22",
 		"area": "H.A.M. Hideout Entrance",
 		"coords": "5995,2480;6165,2640",
-		"notes": "Unlocks H.A.M. Hideout, Fred's Farm, Farming Patch"
+		"unlocks": {
+			"quests": [
+				"Sheep Shearer"
+			],
+			"shops": [],
+			"other": [
+				"H.A.M. Hideout"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Dogs",
@@ -167,7 +351,15 @@
 		"amount": "39",
 		"area": "McGrubor's Wood",
 		"coords": "4385,1715;4630,1940",
-		"notes": "Unlocks Woad Leaves"
+		"unlocks": {
+			"quests": [],
+			"shops": [],
+			"other": [
+				"Dwellberries",
+				"Maple Trees"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Minotaurs",
@@ -182,7 +374,15 @@
 		"amount": "45",
 		"area": "Al Kharid Sorceres House",
 		"coords": "6460,2810;6565,2980",
-		"notes": "Unlocks Plateskirts"
+		"unlocks": {
+			"quests": [],
+			"shops": [
+				"Ranael's Super Skirt Store",
+				"Shantay Pass Shop"
+			],
+			"other": []
+		},
+		"notes": ""
 	},
 	{
 		"task": "Ice fiends",
@@ -205,7 +405,18 @@
 		"amount": "19",
 		"area": "Silvarea",
 		"coords": "6460,1775;6815,1955",
-		"notes": "Unlocks 3 Quests, Limestone Mine"
+		"unlocks": {
+			"quests": [
+				"A Soul's Bane",
+				"Rag and Bone Man",
+				"Devious Minds"
+			],
+			"shops": [],
+			"other": [
+				"Limestone Mine"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Ice fiends",
@@ -220,7 +431,19 @@
 		"amount": "44",
 		"area": "Tai Bwo Wannai",
 		"coords": "4855,2930;5065,3090",
-		"notes": "Unlocks General Store, Anvil, 2 Quests"
+		"unlocks": {
+			"quests": [
+				"Jungle Potion",
+				"Tai Bwo Wannai Trio"
+			],
+			"shops": [
+				"Jiminua's Jungle Store"
+			],
+			"other": [
+				"Anvil"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Goblins",
@@ -228,6 +451,20 @@
 		"amount": "29",
 		"area": "Rimmington",
 		"coords": "5410,2580;5585,2800",
+		"unlocks": {
+			"quests": [
+				"Witch's Potion"
+			],
+			"shops": [
+				"Rimmington General Store",
+				"Rommik's Crafty Supplies",
+				"Brian's Archery Supplies"
+			],
+			"other": [
+				"Rimmington Mine",
+				"Rimmington House Portal"
+			]
+		},
 		"notes": "Unlocks Rimmington"
 	},
 	{
@@ -235,7 +472,14 @@
 		"monster": "Various spiders",
 		"amount": "16",
 		"area": "Varrock Sewer",
-		"notes": "Unlocks Moss Boss"
+		"unlocks": {
+			"quests": [],
+			"shops": [],
+			"other": [
+				"Bryophata's Lair"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Ice fiends",
@@ -264,21 +508,52 @@
 		"amount": "40",
 		"area": "Kourend Castle",
 		"coords": "1345,1220;1560,1365",
-		"notes": "Unlocks Platebody Store, Cakes, Silver"
+		"unlocks": {
+			"quests": [],
+			"shops": [
+				"Silk Shop",
+				"Silver Shop",
+				"Food Shop",
+				"Gem Shop"
+			],
+			"other": [
+				"Various Stalls"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Scorpions",
 		"monster": "Scorpion (lvl 14)",
 		"amount": "44",
 		"area": "Dwarven Mine (South)",
-		"notes": "Unlocks Motherlode Mine, Ores"
+		"unlocks": {
+			"quests": [],
+			"shops": [],
+			"other": [
+				"Motherlode Mine"
+			]
+		},
+		"notes": "Unlocks Mining Guild if a dwarves task is done in the mine"
 	},
 	{
 		"task": "Dwarves",
 		"monster": "Dwarf (lvl 14)",
 		"amount": "46",
 		"area": "Dwarven Mine (North)",
-		"notes": "Unlocks Shops, Ores, Anvil"
+		"unlocks": {
+			"quests": [],
+			"shops": [
+				"Nurmof's Pickaxe Shop",
+				"Drogo's Mining Emporium",
+				"Hura's Crossbow Shop",
+				"Dwarven Shopping Store"
+			],
+			"other": [
+				"Mining Guild"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Cave Crawlers",
@@ -293,15 +568,26 @@
 		"amount": "21",
 		"area": "North of Edgeville",
 		"coords": "5775,1635;5940,1845",
-		"notes": "Unlocks Krystilia, Edgeville"
+		"unlocks": {
+			"quests": [],
+			"shops": [
+				"Perdu",
+				"Edgeville General Store",
+				"Oziach's Armour"
+			],
+			"other": [
+				"Krystilia"
+			]
+		},
+		"notes": ""
 	},
 	{
 		"task": "Banshees",
 		"monster": "Banshee (lvl 23)",
 		"amount": "39",
-		"area": "Slayer Tower",
+		"area": "Slayer Tower (Ground Floor)",
 		"coords": "6765,1550;6985,1740",
-		"notes": "Unlocks Mazchna"
+		"notes": ""
 	},
 	{
 		"task": "Kalphites",
@@ -316,6 +602,13 @@
 		"amount": "34",
 		"area": "Crafting Guild",
 		"coords": "5285,2390;5440,2555",
+		"unlocks": {
+			"quests": [],
+			"shops": [],
+			"other": [
+				"Crafting Guild"
+			]
+		},
 		"notes": ""
 	},
 	{
@@ -331,6 +624,13 @@
 		"amount": "33",
 		"area": "Bone Yard",
 		"coords": "6110,1010;6475,1200",
+		"unlocks": {
+			"quests": [],
+			"shops": [],
+			"other": [
+				"Steel Platelegs Spawn"
+			]
+		},
 		"notes": ""
 	},
 	{
@@ -360,7 +660,21 @@
 		"amount": "36",
 		"area": "North of Shilo Village",
 		"coords": "4980,3160;5225,3485",
-		"notes": "Unlocks Shilo Village, Duradel, Nature Altar"
+		"unlocks": {
+			"quests": [
+				"Shilo Village",
+				"One Small Favour"
+			],
+			"shops": [
+				"Shilo General Store",
+				"Fishing Shop"
+			],
+			"other": [
+				"Nature Altar",
+				"Duradel"
+			]
+		},
+		"notes": "Unlocks Shilo Village"
 	},
 	{
 		"task": "Dwarves",
@@ -368,6 +682,16 @@
 		"amount": "39",
 		"area": "Southwest of Coal Trucks",
 		"coords": "4180,1765;4385,2010",
-		"notes": "Unlocks Dwarf Cannon"
+		"unlocks": {
+			"quests": [
+				"Dwarf Cannon"
+			],
+			"shops": [],
+			"other": [
+				"Coal Mine",
+				"Coal Trucks"
+			]
+		},
+		"notes": ""
 	}
 ]
