--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -354,10 +354,11 @@
 		"monster": "Spider (lvl 3)",
 		"amount": "22",
 		"area": "H.A.M. Hideout Entrance",
-		"coords": "5995,2480;6165,2640",
+		"coords": "5995,2480;6165,2720",
 		"unlocks": {
 			"quests": [
-				"Sheep Shearer"
+				"Sheep Shearer",
+				"Lost City"
 			],
 			"shops": [],
 			"other": [
