--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -1,4 +1,12 @@
 {
+  "54":{
+    "task":"Crawling Hnads",
+    "master":"Turael",
+    "monster":"Crawling Hand (lvl 8)",
+    "amount":"41",
+    "area":"Slayer Tower (Ground Floor)",
+    "notes":""
+  },
   "53":{
     "task":"Monkeys",
     "master":"Turael",
