--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -1,6 +1,6 @@
 {
   "54":{
-    "task":"Crawling Hnads",
+    "task":"Crawling Hands",
     "master":"Turael",
     "monster":"Crawling Hand (lvl 8)",
     "amount":"41",
